plugins/kotlin/idea/tests/testData/highlighterMetaInfo/diagnostics/redundantOpenFunctionInInterfaceDiagnostic.kt.highlighting.k2
// ALLOW_ERRORS
// HIGHLIGHT_WARNINGS
// HIGHLIGHTER_ATTRIBUTES_KEY

interface Interface {
    <!HIGHLIGHTING("severity='WARNING'; descr='[REDUNDANT_OPEN_IN_INTERFACE] Modifier 'open' is redundant for abstract interface members.'; highlightingTextAttributesKey='NOT_USED_ELEMENT_ATTRIBUTES'")!>open<!> fun foo()
}
